# routes/api.php
@@ -3,17 +3,24 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthController;
 use App\Http\Controllers\Customer\CustomerController;
+use App\Http\Controllers\CustomerFavorite\CustomerFavoriteController;
 
 Route::prefix('auth')->group(function () {
     Route::post('login', [AuthController::class, 'login']);
 });
 
 Route::middleware('auth:sanctum')->group(function () {
-    Route::prefix('customers')->group(function () {
-        Route::post('/', [CustomerController::class, 'store']);
-        Route::get('/', [CustomerController::class, 'index']);
-        Route::put('/{id}', [CustomerController::class, 'update']);
-        Route::get('/{id}', [CustomerController::class, 'show']);
-        Route::delete('/{id}', [CustomerController::class, 'destroy']);
+    Route::apiResource('customers', CustomerController::class)->only([
+        'index',
+        'store',
+        'show',
+        'update',
+        'destroy'
+    ]);
+
+    Route::prefix('customers/{customer}')->group(function () {
+        Route::get('favorites', [CustomerFavoriteController::class, 'index']);
+        Route::post('favorites', [CustomerFavoriteController::class, 'store']);
+        Route::delete('favorites/{product}', [CustomerFavoriteController::class, 'destroy']);
     });
 });
